@@ -2,3 +2,4 @@ Release notes for Version 1.25 (Sept 2016 -- )
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 - HASH()/SHA1 and MD5 now work also without libgcrypt
 - new Commands: HIDEK, SHOWK (Android)
+- fixed bug in MERGE and FILESELECT
